src/parser/snapshots/coconut__parser__expression__tests__call_expr-6.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"console.log(\\\"Hello World!\\\")\".into()).unwrap().1"
---
{
  "type": "CallExpression",
  "callee": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "console",
      "start": 0,
      "end": 7
    },
    "property": {
      "type": "Identifier",
      "name": "log",
      "start": 8,
      "end": 11
    },
    "computed": false,
    "start": 0,
    "end": 11
  },
  "arguments": [
    {
      "type": "Literal",
      "value": "Hello World!",
      "start": 12,
      "end": 26
    }
  ],
  "start": 0,
  "end": 27
}
