src/parser/snapshots/coconut__parser__expression__tests__call_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"foo()\".into()).unwrap().1"
---
{
  "type": "CallExpression",
  "callee": {
    "type": "Identifier",
    "name": "foo",
    "start": 0,
    "end": 3
  },
  "arguments": [],
  "start": 0,
  "end": 5
}
