src/parser/snapshots/coconut__parser__expression__tests__exponentiation.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x ** y\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "**",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Identifier",
    "name": "y",
    "start": 5,
    "end": 6
  },
  "start": 0,
  "end": 6
}
