src/parser/snapshots/coconut__parser__expression__tests__expr_bp_assignment-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x = 1 + 2\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "operator": "+",
    "left": {
      "type": "Literal",
      "value": 1.0,
      "start": 4,
      "end": 5
    },
    "right": {
      "type": "Literal",
      "value": 2.0,
      "start": 8,
      "end": 9
    },
    "start": 4,
    "end": 9
  },
  "start": 0,
  "end": 9
}
